# Nifty-Timing-Index

./: .env.example  .gitignore  README.md  cf_dns.py  final_plan.md  firestore.rules  main.py  plan.md  pyproject.toml
.github/workflows/: daily-retrain.yml  daily-screener-am.yml  daily-screener-pm.yml  deploy-website.yml  hourly-signal.yml
data/api/: backtest.json  history.json  latest.json  previous_run.json
data/model/: metadata.json
data/screener/: latest_post_market.json  latest_pre_market.json
data/signals/: nifty_50.csv  nifty_bank.csv  sensex.csv
scripts/: bootstrap_data.py  quick_data.py  run_hourly_seq.py  setup.py  upload_all_env.py  upload_secrets.py  validate_env.py
src/nti/: __init__.py
src/nti/changelog/: generator.py
src/nti/config/: holidays.py  psu_stocks.py  settings.py  thresholds.py
src/nti/indicators/: composite.py  feature_engineer.py  normalizer.py  technical_display.py
src/nti/llm/: blog_generator.py  news_analyzer.py  news_client.py  prompts.py  search_client.py
src/nti/model/: explainer.py  fallback.py  labeler.py  predictor.py  trainer.py
src/nti/notifications/: email_sender.py
src/nti/pipelines/: daily_retrain.py  hourly.py  screener_run.py
src/nti/scrapers/: amfi_data.py  cnn_fear_greed.py  fred_api.py  gift_nifty.py  mmi_alternative.py  mospi_data.py  nse_fii_dii.py  nse_indices.py  nse_options.py  nse_stocks.py  rbi_data.py  rss_news.py  tickertape_mmi.py  yahoo_finance.py
src/nti/screener/: analyst_ratings.py  filters.py  fundamentals.py  scorer.py  universe.py
src/nti/storage/: blog_writer.py  csv_writer.py  git_committer.py  json_api.py
tests/: test_blog_generator.py  test_changelog.py  test_config.py  test_email.py  test_indicators.py  test_model.py  test_scrapers.py  test_screener.py  test_storage.py
website/: astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
website/public/: CNAME  _headers  robots.txt
website/src/: content.config.ts
website/src/components/: IndexScores.tsx  NTIChart.tsx  (+3 more)
(+28 files in other folders)
